<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/big_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_text_view_connection"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:src="@drawable/connection_image_view_connection" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ip_address_edit_text_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_address_edit_text_connection"
                android:inputType="number|text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/port_edit_text_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port_edit_text_connection"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_edit_text_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_edit_text_connection"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/connect_button_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_button_connection"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
